# marstek_client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_TIMING_ISSUES.md  Dockerfile  FINAL_REPORT.md  LICENSE  Makefile  PROJECT_REPORT.md  QUICKSTART_RASPBERRY.md  README.md  docker-compose.yml  env.template  pyproject.toml
.github/workflows/: tests.yml
backend/: ALEMBIC.md  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  worker.py
backend/scripts/: init_db.py
backend/tests/: __init__.py  conftest.py  test_battery_manager.py  test_marstek_client.py  test_mode_controller.py  test_notifier.py  test_scheduler.py  test_tempo_service.py
config/: config.example.yaml
docs/: GIT_WORKFLOW.md  IMPLEMENTATION_NOTES.md  INSTALLATION_RASPBERRY.md  MarstekDeviceOpenApi.txt  api.md  architecture.md  cloudflare-tunnel.md  cloudflared-config.yml.example  cloudflared.service.example  deployment.md  tailscale-setup.md  troubleshooting.md
marstek/: __init__.py  main.py
marstek/api/: __init__.py  marstek_client.py
marstek/core/: config.py  logger.py
marstek/database/: models.py  repository.py
marstek/scheduler/: __init__.py  battery_manager.py
marstek/services/: __init__.py  telegram.py  tempo.py
scripts/: GUIDE_MERGE_PI5.md  analyze_pi5_changes.sh  backup.sh  check-conflicts.sh  code-review.sh  connect_raspberry.sh  discover_batteries.py  extract_pdf_text.py  finalize_pi5_merge.sh  find_and_analyze_pi5.sh  init_db.py  install_on_pi.sh  install_raspberry.sh  merge_pi5_intelligent.sh  prepare_pi5_merge.sh  resolve-conflicts.py  start_and_test_tempo.sh  test_tempo.sh  test_tempo_docker.sh
tests/: __init__.py  conftest.py  test_config.py  test_marstek_client.py  test_tempo_service.py
ui/: Dockerfile  requirements.txt  streamlit_app.py  utils.py
(+39 files in other folders)
